[tool.poetry]
name = "createnv"
version = "0.0.2"
description = "CLI to create .env files with environment variables."
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cuducos/createnv"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[tool.poetry.scripts]
createnv = "createnv.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
ipython = "^7.13.0"
pytest = "^5.4.1"
pytest-black = "^0.3.8"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-mock = "^2.0.0"
pytest-mypy = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
